# ShadowsHide

./: Cargo.toml  README.md
assets/shaders/: shadowblob.frag  shadowblob.vert
src/: assets.rs  lib.rs  main.rs  player.rs  settings.rs  shader.rs
